[project]
name = "kms"
version = "0.1.0"
description = "CLI Key Management Service for KeePassXC Database format storing secure secrets and passwords"
authors = [
    {name = "Michael Ligus",email = "maveilthain@gmail.com"}
]
license = {text = "BSL 1.0"}
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "pykeepass (>=4.1.1.post1,<5.0.0)",
    "pykeepass-cache (>=2.0.3,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "cleo (>=2.1.0,<3.0.0)",
    "confuse (>=2.0.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
autoflake = "^2.3.1"
ruff = "^0.11.2"
flake8-pyproject = "^1.2.3"

[tool.poetry.scripts]
kms = "kms.entry:cli"


[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
(
   \.idea
  | \.vscode
  | \.postman
  | \.git
  | \__pycache__
)
'''

[tool.flake8]
exclude = ['.idea', '.vscode', '.postman', '.git', '__pycache__']
max-line-length = 120
extend-ignore = ["E203", "E402", "E701"]
per-file-ignores = []

[tool.autoflake]
remove-all-unused-imports = true
in-place = true
exclude = ['.idea', '.vscode', '.postman', '.git', '__pycache__']

[tool.ruff]
exclude = ['.idea', '.vscode', '.postman', '.git', '__pycache__']
target-version = "py312"
line-length=120

[tool.ruff.lint]
ignore = ["E402"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"