[project]
name = "kms"
version = "0.1.0"
description = "CLI Key Management Service for KeePassXC Database format storing secure secrets and passwords"
authors = [
    {name = "Michael Ligus", email = "maveilthain@gmail.com"}
]
license = {text = "BSL 1.0"}
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "rich (>=13.9.4,<14.0.0)",
    "cleo (>=2.1.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "addict (>=2.4.0,<3.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "pycryptodome (>=3.22.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
autoflake = "^2.3.1"
ruff = "^0.11.2"
flake8-pyproject = "^1.2.3"

[tool.poetry.scripts]
kms = "kms.entry:cli"


[tool.isort]
profile = 'black'
py_version = 3
skip = ['.idea', '.vscode', '.postman', '.git', '__pycache__']
src_paths = ['kms']
multi_line_output = 3
force_grid_wrap = 2
use_parentheses = true
include_trailing_comma = true
group_by_package = true


[tool.black]
line-length = 120
target-version = ['py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
(
   \.idea
  | \.vscode
  | \.postman
  | \.git
  | \__pycache__
)
'''

[tool.flake8]
exclude = ['.idea', '.vscode', '.postman', '.git', '__pycache__']
max-line-length = 120
extend-ignore = ["E701"]
per-file-ignores = []

[tool.autoflake]
remove-all-unused-imports = true
in-place = true
exclude = ['.idea', '.vscode', '.postman', '.git', '__pycache__']

[tool.ruff]
exclude = ['.idea', '.vscode', '.postman', '.git', '__pycache__']
target-version = "py313"
line-length=120

[tool.ruff.lint]
#ignore = ["E402"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"